name:                labirinto
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/labirinto#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library 
  hs-source-dirs:     src
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5, JuicyPixels, containers, deepseq, random
  exposed-modules:    Parser, Graph, GraphConverter, Bfs, Dfs, AStar, MazeGenerator

executable labirinto
  hs-source-dirs:     app
  main-is:            Main.hs
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5, JuicyPixels, labirinto, deepseq, random

test-suite spec
  Type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:      base >= 4.7 && < 5, JuicyPixels, hspec, QuickCheck >= 2.12.6.1, MazeSolver
